css/globalStyle.css
/* ... */
div.ochicken-bg * {
    z-index: 2;
}

.mm-title, .mm-title span {
    padding-top: 1rem;
    z-index: 2;

    font-size: 9vmin;
    text-align: center;

    font-family: "GCursive", cursive, serif, all;
}

.mm-buttons-container {
    z-index: 2;

    margin: auto;

    display: flex;
    flex-flow: column nowrap;

    overflow-x: initial;
    overflow-y: initial;
}

.mm-button {
    position: relative;
    font-size: 5.2vmin;
    padding: 0.5rem;

    cursor: pointer;

    font-family: "GCursive", cursive, sans-serif, all;
}

.mm-button::after {
    content: '';

    position: absolute;

    left: 50%;
    bottom: 0;
    width: 0;
    height: 1px;

    background: white;

    transition-property: width, left;
    transition-duration: 200ms;
}

.mm-button:hover::after {
    left: 0;
    width: 100%;
}

/* title media queries */
@media (orientation: portrait) {
    /* make title text smaller */
    .mm-title, .mm-title span {
        font-size: 6vmin;
    }

    #title-container::before {
        background-position: 45% 15%;
        background-size: 200% 100%;
    }
}

/* lynns */
#lynns-container {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;

    width: 100%;
    height: 90%;

    margin: auto;
}

#lynns-amount-header {
    text-align: center;
    font-size: 3.5vmin;

    margin-bottom: 1rem;
}

#lynns-main {
    width: 70%;
    height: 85%;

    display: flex;
    flex-flow: row wrap;
}

.lynns-page {
    width: 100%;
    height: 100%;

    display: flex;
    flex-flow: row wrap;
    justify-items: center;

    background-image: url("../assets/journalynn.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    animation-delay: 50ms;
}

@keyframes page-slide {
    from {
        transform: translateX(140%);
    }

    to {
        transform: translateX(0rem);
    }
}

@keyframes page-slide-left {
    from {
        transform: translateX(0rem);
    }

    to {
        transform: translateX(-140%);
    }
}

.lynns-page {
    animation-timing-function: linear;
}

.lynns-page.anim {
    animation: page-slide;
    animation-direction: normal;
    animation-fill-mode: forwards;
    animation-duration: var(--slide-anim-time);
}

.lynns-page.anim-left {
    animation: page-slide-left;
    animation-direction: normal;
    animation-fill-mode: forwards;
    animation-duration: var(--slide-anim-time);
}

.lynns-page.anim-reverse {
    animation: page-slide;
    animation-direction: reverse;
    animation-fill-mode: forwards;
    animation-duration: var(--slide-anim-time);
}

.lynns-page.anim-left-reverse {
    animation: page-slide-left;
    animation-direction: reverse;
    animation-fill-mode: forwards;
    animation-duration: var(--slide-anim-time);
}

.lynns-subpage {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    justify-content: center;
    align-content: center;
    width: 50%;
    height: 100%;
}

.lynn {
    width: 24%;
    height: 24%;

    margin: 1.5%;

    background: white;
    box-shadow: 0 0 0.5vmin 0.125vmin black;

    display: flex;
    flex-flow: column nowrap;
    justify-content: space-evenly;
    align-items: center;
}

.lynn.clickable, .lynn.clickable * {
    pointer-events: all;
    cursor: pointer;
}

.lynn-dot {
    position: relative;
    margin: 0;

    overflow-x: initial;
    overflow-y: initial;
}

.lynn-dot::after {
    content: '';

    position: absolute;
    top: -2px;
    left: 50%;

    width: 0.6vmin;
    height: 0.6vmin;

    background: #EEE;
    border: 0.1rem solid black;
    border-radius: 50%;

    transform: translateX(-50%);

    z-index: 14;
}

.lynn-img {
    width: 90%;
    height: 45%;
}

.locked {
    filter: brightness(0%) hue-rotate(180deg);
}

.lynn-text {
    color: black;
    font-size: 1.1vw;

    text-transform: capitalize;
}

#lynns-controls {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;

    margin-top: 2rem;
}

#lynn-page-text {
    padding: 0 0.5rem;
}

/* lynns queries */
@media (orientation: portrait) {
    .lynn {
        width: 12vmin;
        height: 10vmin;
    }

    #lynns-main {
        width: 95%;
        height: 50%;
    }
}

.back-button {
    position: absolute;

    top: 1rem;
    left: 1rem;

    transition: color 160ms;
}

.back-button:hover {
    color: red;
}

.control-button {
    color: white;
    width: 2.25rem;
    height: 2.25rem;
    border-radius: 50%;

    cursor: pointer;

    background: var(--dark-panel-bg);
    font-size: 2rem;
}

#options-container {
    position: relative;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;

    height: 100%;
}

.options-range-container {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;

    width: 18rem;
    margin: 0 auto;
    margin-bottom: 1rem;
}

.options-button {
    cursor: pointer;

    font-size: 2rem;
}

.c-red {
    color: red;
}

#wipe-save-button {
    position: absolute;

    left: 50%;
    bottom: 1rem;

    transform: translateX(-50%);
}

/* chapter screen */
#chapter-container {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;

    margin: auto;
}

#ch-text {
    position: relative;
    font-size: 4.5rem;
    padding-bottom: 1rem;
    margin-bottom: 1rem;
}

.border-below { position: relative; }

#ch-text::after, .border-below::after {
    content: '';

    position: absolute;
    left: 50%;
    bottom: 0;
    width: 0;
    height: 1px;
    background: white;

    transition: all 1.5s;
    transition-delay: 0.25s;
}

#ch-text.grow-border::after, .border-below::after {
    left: 0;
    width: 100%;
}

#ch-name {
    font-family: "GCursive", cursive, sans-serif, all;
    font-size: 2.5rem;

    text-transform: capitalize;
}
/* ... */

